--- a/Assigments/Week_5/CartoonDataApp/src/main/webapp/WEB-INF/Style.css
+++ b/Assigments/Week_5/CartoonDataApp/src/main/webapp/WEB-INF/Style.css
@@ -1,28 +1,28 @@
 main {
-    margin: 5% 10%
+  margin: 5% 10%;
 }
 
 /* Tag selector */
 button {
-    font-family: Arial, Helvetica, sans-serif !important;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 
 /* Class selector */
-.btn {
+/*.btn {
     color: green; 
 }
 
 /* Id selector */
-#login-btn {
-    color: white;
-    background-color: deepskyblue;
-    font-family: "Helvetica", Times, serif !important;
+#button {
+  color: white;
+  background-color: deepskyblue;
+  font-family: "Helvetica", Times, serif !important;
 }
 
-#login-form {
-    padding-left: 20%;
-    padding-right: 20%;
-    padding-top: 5%;
+#box {
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-top: 5%;
 }
 
 /* CSS comment*/
@@ -42,5 +42,3 @@ Descendent selector (applies only to anchor tags that are within some element wi
 }
 */
 /* CSS Pseudo classes */
-button:hover {
-    background-color: purple !important;
